plugins {
    // Apply the java plugin to add support for Java
    id 'java'
    id 'com.github.johnrengelman.shadow'
    id 'io.franzbecker.gradle-lombok' version '4.0.0'
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13


shadowJar {
    archiveBaseName.set('Otus')
    archiveVersion.set('0.1')
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'ru.otus.hw08.Main'
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
    implementation group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    implementation group: 'org.glassfish.main.core', name: 'glassfish', version: '5.1.0'
    implementation group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
    implementation group: 'org.projectlombok',name:'lombok',version:'1.18.12'
}

test {
    useJUnitPlatform()
}

task run(type: JavaExec) {
    group = 'Run' // <-- change the name as per your need
    description = 'Run main method class Main'
    classpath sourceSets.main.runtimeClasspath // <-- Don't change this
    main = "ru.otus.hw08.Main"
    //jvmArgs = ["-Xms1g", "-Xmx1g","-XX:+UseG1GC"/*,"-Xlog:gc*:file=gc.log"*/]
   //args "arg1", "arg2"
}

tasks.build.dependsOn tasks.shadowJar